styles/styles.scss
@import '../mixins/mixins.scss';

body {
    font-family: Arial, sans-serif;
    max-width: 1200px;
    margin: 20px auto;
    padding: 20px;
    background-color: #f0f2f5;
}

.main {

    .titulo {
        text-align: center;
        color: #1a1a1a;
        margin-bottom: 35px;
        font-size: 28px;
        text-transform: uppercase;
        letter-spacing: 2px;
    }

    .container {
        display: flex;
        flex-direction: column;

        @include desktop {
            gap: 100px;
        }


        .box-1, .box-2 {
            display: flex;
            flex-direction: column;

            .box-titulo {
                font-size: 18px;
                color: #444;
                margin-bottom: 15px;
                font-weight: bold;
                text-align: center;

                @include desktop {
                    text-align: start;
                }
            }

            textarea {
                height: 200px;
                width: 80%;
                display: flex;
                margin-left: auto;
                margin-right: auto;
                box-sizing: border-box;

                @include desktop {
                    width: 100%;
                    height: 600px;
                    padding: 15px;
                    font-family: 'Courier New', monospace;
                    border: 2px solid #007bff;
                    border-radius: 8px;
                    font-size: 14px;
                    resize: vertical;
                }
            }
        }

        .box-2 {
            margin-top: 50px;

            @include desktop {
                margin: 0;
            }

            .baixar-csv {
                margin-top: 40px;
                display: flex;
                margin-left: auto;
                margin-right: auto;
                flex-direction: column;

                @include desktop {
                    margin-left: 0;
                }
            
                #nomeArquivo {
                    width: 200px;
                    text-align: center;
                }
            }
        }
    }
}

button {
    padding: 12px 25px;
    background: #007bff;
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
    font-size: 16px;
    margin-top: 15px;
    transition: transform 0.2s, background 0.3s;
    display: flex;
    text-align: center;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;

    &:hover {
        background: #0056b3;
        transform: translateY(-2px);
    }
}

#resultado {
    white-space: pre;
    font-family: 'Courier New', monospace;
    padding: 20px;
    background: white;
    border: 2px solid #ddd;
    border-radius: 8px;
    overflow-x: auto;
    font-size: 14px;
    line-height: 1.5;
}

